<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/Inicio"
        android:title="@string/inicio"
        android:icon="@android:drawable/ic_menu_manage"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/categoria"
        android:title="categoria"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="never" />

    <item android:id="@+id/vendedor"
        android:title="vendedor"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/productos"
        android:title="productos"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_setting"
        android:title="@string/abc_action_mode_done"
        android:icon="@android:drawable/ic_menu_today"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText">
        <item android:id="@+id/action_settings"
            android:title="@string/action_settings"
            android:icon="@android:drawable/ic_menu_today"
            android:orderInCategory="100"
            app:showAsAction="ifRoom|withText">
            <menu>
                <item android:id="@+id/opcion1"
                    android:title="@string/opcion1"
                    app:showAsAction="withText"/>
                <item android:id="@+id/opcion2"
                    android:title="@string/opcion2"
                    app:showAsAction="withText"/>
                <item android:id="@+id/opcion3"
                    android:title="@string/opcion3"
                    app:showAsAction="withText"/>
                <item android:id="@+id/opcion4"
                    android:title="@string/opcion4"
                    app:showAsAction="withText"/>
                <item android:id="@+id/inicio"
                    android:title="@string/opcion5"
                    app:showAsAction="withText"/>
            </menu>
        </item>

        <menu>


            <item android:id="@+id/opcion1_1"
                android:title="@string/opcion1_1"
                app:showAsAction="withText"/>
            <item android:id="@+id/opcion2_2"
                android:title="@string/opcion2_2"
                app:showAsAction="withText"/>

        </menu>

    </item>








</menu>
